# rust-genetic-algorithm

./: Cargo.toml  readme.md
src/: main.rs
