[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = ["Aaron Fitzpatrick <a.fitzy98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.14"